--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
     ],
     "routes": [
         {
+            "src": "/api/posts/([^/]+)$",
+            "dest": "/api/posts/[slug].js"
+        },
+        {
             "src": "/api/(.*)",
             "dest": "/api/$1",
             "headers": {
