--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     "routes": [
         {
             "src": "/api/posts/([^/]+)$",
-            "dest": "/api/posts/[slug].js"
+            "dest": "/api/posts/[slug].js?slug=$1"
         },
         {
             "src": "/api/(.*)",
