--- a/vercel.json
+++ b/vercel.json
@@ -1,59 +1,58 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
-        },
-        {
-            "src": "api/**/*.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/posts/([^/]+)$",
-            "dest": "/api/posts/[slug].js?slug=$1"
-        },
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/$1",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type"
-            }
-        },
-        {
-            "src": "^/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "^/favicon.ico",
-            "dest": "/favicon.ico"
-        },
-        {
-            "src": "^/manifest.json",
-            "dest": "/manifest.json"
-        },
-        {
-            "src": "^/robots.txt",
-            "dest": "/robots.txt"
-        },
-        {
-            "src": "^/sitemap.xml",
-            "dest": "/sitemap.xml"
-        },
-        {
-            "src": "/blog/.*",
-            "dest": "/index.html"
-        },
-        {
-            "src": "/",
-            "dest": "/index.html"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/posts/([^/]+)$",
+      "dest": "/api/posts/[slug].js?slug=$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    },
+    {
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "^/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "^/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "^/robots.txt",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "^/sitemap.xml",
+      "dest": "/sitemap.xml"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
