--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.0.2",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.6",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
