--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "akeyreuwebsiteupdate",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server": "node api/server.js",
+    "server": "node server.js",
     "dev": "concurrently \"npm run server\" \"npm run start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -28,6 +29,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.0.2",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.6",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
