Accessibility, build errors

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "security:update:auto": "node scripts/dependency-update.js --auto",
     "security:fix": "npm audit fix",
     "sitemap:generate": "node scripts/generate-sitemap.js",
-    "seo:audit": "npm run sitemap:generate && npm run posts:validate && npm run test:robots:comprehensive",
+    "seo:audit": "npm run build && node scripts/seo-audit.js",
+    "seo:live": "node scripts/live-seo-test.js",
+    "seo:full": "npm run sitemap:generate && npm run posts:validate && npm run test:robots:comprehensive && npm run seo:audit",
     "ux:audit": "npm run test:ux",
     "full:audit": "npm run seo:audit && npm run ux:audit && npm run security:audit",
     "analyze": "ANALYZE=true npm run build",
@@ -67,7 +69,9 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "craco-alias": "^3.0.1",
     "express": "^5.1.0",
+    "jsdom": "^26.1.0",
     "postcss-cli": "^11.0.1",
+    "puppeteer": "^24.10.2",
     "react-scripts": "^5.0.1",
     "sass": "^1.89.2",
     "vercel": "^43.2.0",
