--- a/vercel.json
+++ b/vercel.json
@@ -39,6 +39,14 @@
       "dest": "/api/search?featured=true"
     },
     {
+      "src": "/api/rss$",
+      "dest": "/api/feeds?format=rss"
+    },
+    {
+      "src": "/api/feed.json$",
+      "dest": "/api/feeds?format=json"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
