Admin changes, blog fixes

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ ENABLE_SECURITY_HEADERS=true
 REQUIRE_ORIGIN_VALIDATION=false
 MAX_REQUEST_SIZE=1048576
 
+# Admin Authentication (REQUIRED)
+ADMIN_USERNAME=your-admin-username
+ADMIN_PASSWORD=your-secure-admin-password
+
 # Secrets (CHANGE THESE IN PRODUCTION!)
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
