🚀 Complete Nimbus AI Integration
✅ Features Added:
- Full Nimbus AI integration with real API calls
- Multi-agent system (GPT-4, Claude, Grok)
- Intelligent agent selection based on query type
- Complete admin interface with AI management
- Real-time health monitoring
- Production-ready deployment configuration

🤖 AI Capabilities:
- GPT-4 for general and technical queries
- Claude for health and wellness topics
- Grok for emotional and creative responses
- Fallback system for reliability
- Contextual Akeyreu product knowledge

🔧 Technical Improvements:
- Enhanced setupProxy.js with real AI endpoints
- Comprehensive environment variable management
- Production deployment templates
- Security configurations
- Error handling and fallbacks

📚 Documentation:
- Complete deployment guide
- Environment variable templates
- API integration documentation
- Security best practices

🎯 Ready for Production:
- Vercel deployment ready
- Environment variables configured
- Security measures implemented
- Comprehensive testing completed

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,21 @@ NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key
 CONTACT_EMAIL=contact@akeyreu.com
 
 # =============================================================================
+# NIMBUS AI CONFIGURATION
+# =============================================================================
+
+# AI Service API Keys (REQUIRED for Nimbus AI functionality)
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+XAI_GROK_API_KEY=your_grok_api_key_here
+
+# Nimbus AI Settings
+NIMBUS_ENABLED=true
+NIMBUS_DEFAULT_AGENT=gpt4
+NIMBUS_MAX_CONVERSATION_LENGTH=20
+NIMBUS_RESPONSE_TIMEOUT=30000
+
+# =============================================================================
 # ANALYTICS & MONITORING
 # =============================================================================
 
@@ -120,4 +135,6 @@ LOG_REMOTE_ENDPOINT=
 # □ Configure proper logging
 # □ Set up monitoring and alerts
 # □ Test all security features
+# □ Configure AI API keys (OpenAI, Anthropic, Grok)
+# □ Test Nimbus AI functionality
 # □ Run security audit: npm run security:audit
