--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "posts:validate": "node scripts/manage-posts.js validate",
     "posts:migrate": "node scripts/migrate-posts-schema.js",
     "test:api": "node scripts/test-api.js",
+    "test:nimbus": "node scripts/test-nimbus.js",
     "test:robots": "node scripts/test-robots.js",
     "test:robots:comprehensive": "node scripts/test-robots-comprehensive.js",
     "test:robots:live": "node scripts/test-live-endpoint.js",
@@ -48,6 +49,7 @@
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "http-proxy-middleware": "^3.0.5",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.2.0",
