--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
   "functions": {
     "api/**/*.js": {
-      "runtime": "@vercel/node@3"
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
