--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/three": "^0.179.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "http-proxy-middleware": "^3.0.5",
@@ -61,6 +62,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "slugify": "^1.6.6",
+    "three": "^0.179.1",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
