Final cleanup: Remove all AkeyreuSite references and update branding
- Updated package.json name from 'akeyreuwebsiteupdate' to 'joyous-website'
- Updated .env.example template for Joyous branding
- Updated production URLs to joyousbound.vercel.app
- Updated deployment guide with correct repository URL
- Completed transition from AkeyreuSite to JoyousSite

--- a/akeyreusite/.env.example
+++ b/akeyreusite/.env.example
@@ -1,4 +1,4 @@
-# Environment Variables Template for Akeyreu
+# Environment Variables Template for Joyous
 # Copy this file to .env.local for development or configure in production
 
 # =============================================================================
