--- a/akeyreusite/.env.production
+++ b/akeyreusite/.env.production
@@ -12,10 +12,10 @@ DISABLE_ESLINT_PLUGIN=false
 REACT_APP_NODE_ENV=production
 
 # Base URL for production
-REACT_APP_BASE_URL=https://www.akeyreu.com
+REACT_APP_BASE_URL=https://joyousbound.vercel.app
 
 # API configuration
-REACT_APP_API_BASE_URL=https://www.akeyreu.com/api
+REACT_APP_API_BASE_URL=https://joyousbound.vercel.app/api
 
 # Performance optimizations
 REACT_APP_ENABLE_PERFORMANCE_MONITORING=true
