--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "outputDirectory": "akeyreusite/build",
   "public": true,
   "functions": {
-    "akeyreusite/api/**/*.js": {
+    "api/**/*.js": {
       "maxDuration": 30
     }
   },
@@ -44,16 +44,12 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/akeyreusite/api/$1"
-    },
-    {
       "source": "/manifest.json",
-      "destination": "/akeyreusite/api/manifest"
+      "destination": "/api/manifest"
     },
     {
       "source": "/sw.js",
-      "destination": "/akeyreusite/api/sw"
+      "destination": "/api/sw"
     },
     {
       "source": "/((?!api|sw\\.js|manifest\\.json|robots\\.txt|sitemap\\.xml|favicon\\.ico|static|_next|llms\\.txt|posts\\.json).*)",
