Fix build process: Switch from CRACO to react-scripts for Vercel
- Change build command from 'craco build' to 'react-scripts build'
- Remove vercel-build.js script from build process to avoid path issues
- Keep craco as build:craco for local development if needed
- Should resolve 'Could not find index.html' error in Vercel build

--- a/akeyreusite/package.json
+++ b/akeyreusite/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "craco start",
-    "build": "craco build && node scripts/vercel-build.js",
+    "build": "react-scripts build",
+    "build:craco": "craco build",
     "dev": "node scripts/dev-server.js",
     "dev:vercel": "npx vercel dev",
     "test": "craco test",
