--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "version": 2,
-  "name": "joyous-website",
-  "buildCommand": "cd akeyreusite && npm ci && npm run build",
-  "outputDirectory": "akeyreusite/build",
   "public": true,
   "functions": {
     "api/**/*.js": {
@@ -42,6 +39,10 @@
     }
   ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
     {
       "source": "/manifest.json",
       "destination": "/api/manifest"
